# hidraulik-cli

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WELCOME.txt  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  uninstall.sh  verify_setup.sh
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  RELEASE_NOTES_v0.3.0.md  TEMPLATE_EXAMPLE.md  TEMPLATE_REPO_SETUP.md  USAGE.md  VARIABLES.md
examples/templates/k8s/: 02-secrets.yaml.j2  03-configs.yaml.j2  04-deployment.yaml.j2  05-ingress.yaml.j2  06-service.yaml.j2  07-pvc.yaml.j2
examples/templates/pipeline/: .gitlab-ci.yml.j2
src/gitlab_cicd_creator/: __init__.py  cli.py  config.py  exceptions.py  gitlab_client.py  k8s_generator.py  logging_config.py  template_manager.py
src/hidraulik/: __init__.py  cli.py  config.py  exceptions.py  gitlab_client.py  logging_config.py  template_manager.py  validators.py
src/hidraulik/services/: __init__.py  k8s_config_service.py  runner_service.py  variable_service.py
tests/: __init__.py  test_cli.py  test_config.py  test_exceptions.py  test_gitlab_client.py  test_k8s_generator.py  test_services.py  test_template_manager.py  test_validators.py
